hphp/test/zend/good/ext/simplexml/tests/sxe_005.php.skipif
<?php 
if (!extension_loaded('simplexml')) print 'skip';
if (!extension_loaded("libxml")) print "skip LibXML not present";
?>