hphp/test/zend/bad/ext/simplexml/tests/sxe_001.php.skipif
<?php
if (!extension_loaded("simplexml")) print "skip SimpleXML not present";
if (!extension_loaded("libxml")) print "skip LibXML not present";
?>